// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToolConfirmationQueue > does not render expansion hint when constrainHeight is false 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ Action Required                                                       1 of 1 │
│                                                                              │
│ 🟡 ? replace edit file                                                       │
│                                                                              │
│ ╭──────────────────────────────────────────────────────────────────────────╮ │
│ │                                                                          │ │
│ │ No changes detected.                                                     │ │
│ │                                                                          │ │
│ ╰──────────────────────────────────────────────────────────────────────────╯ │
│ Apply this change?                                                           │
│                                                                              │
│ ● 1. Allow once                                                              │
│   2. Allow for this session                                                  │
│   3. Allow ALL actions for this session (dangerous)                          │
│   4. Allow ALL actions forever (dangerous)                                   │
│   5. Modify with external editor                                             │
│   6. No, suggest changes (esc)                                               │
│                                                                              │
│ Configure defaults in /settings > Security > Approvals.                      │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`ToolConfirmationQueue > renders expansion hint when content is long and constrained 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ Action Required                                                       1 of 1 │
│                                                                              │
│ 🟡 ? replace edit file                                                       │
│                                                                              │
│ ... first 49 lines hidden ...                                                │
│ 50 line                                                                      │
│ Apply this change?                                                           │
│                                                                              │
│ ● 1. Allow once                                                              │
│   2. Allow for this session                                                  │
│   3. Allow ALL actions for this session (dangerous)                          │
│   4. Allow ALL actions forever (dangerous)                                   │
│   5. Modify with external editor                                             │
│   6. No, suggest changes (esc)                                               │
│                                                                              │
│ Configure defaults in /settings > Security > Approvals.                      │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
  Press ctrl-o to show more lines









"
`;

exports[`ToolConfirmationQueue > renders the confirming tool with progress indicator 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ Action Required                                                       1 of 3 │
│                                                                              │
│ 🟡 ? ls list files                                                           │
│                                                                              │
│ ls                                                                           │
│ Allow execution of: 'ls'?                                                    │
│                                                                              │
│ ● 1. Allow once                                                              │
│   2. Allow for this session                                                  │
│   3. Allow ALL actions for this session (dangerous)                          │
│   4. Allow ALL actions forever (dangerous)                                   │
│   5. No, suggest changes (esc)                                               │
│                                                                              │
│ Configure defaults in /settings > Security > Approvals.                      │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
"
`;
